--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "start:dev": "node prebuild.js && nodemon index.js",
-    "prebuild": "node prebuild.js"
+    "heroku-postbuild": "node prebuild.js"
   },
   "dependencies": {
     "express": "^4.18.1",
